--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ i
 /* second Part Of Section 3 */
 .second
 {
-    height: 300px;
+    min-height: 238px;
     margin-top: 30px;
 }
 
@@ -453,7 +453,7 @@ i
 {
     
     width: 100%;
-    margin: 30px 0 70px;
+    margin: 10px 0 70px;
 }
 
 .maCard
@@ -745,7 +745,7 @@ i
 @media screen and (max-width: 367px){
     .sectionSlide
     {
-        margin-top: 350px;
+        margin-top: 50px;
     }
 }
 
