--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ i
 .Iheader
 {
     width: 100%;
-    min-min-height: 250px;
+    min-height: 250px;
     background-color: var(--color-head);
 }
 
@@ -234,6 +234,22 @@ i
     margin-top: 20px;
     position: relative;
     box-shadow: 0px 2px 8px -1px rgba(0,0,0,0.75);
+}
+
+.price
+{
+    position: absolute;
+    top: 10%;
+    height: 25px;
+    padding: 0 5px;
+    background-color: red;   
+}
+
+.price p
+{
+    font-size: 14px;
+    margin-top: 2px;
+    color: var(--color-white);
 }
 
 .marge-first-card
@@ -455,8 +471,16 @@ i
 
 .monCarousel
 {
-     min-min-height: 300px;
+     min-height: 300px;
 }
+
+.carousel-indicators li
+{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    margin-right: 10px;
+} 
 
 .N-row
 {
@@ -468,7 +492,7 @@ i
 .maCard
 {
     width: 30%;
-    min-min-height: 100px;
+    min-height: 100px;
 }
 
 .cardCenter
