--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ i
 .login
 {
     margin-left: 15px;
-    width: 115px;
+    width: 110px;
 }
 
 .Iheader
@@ -164,6 +164,7 @@ i
     min-height: 55px;
     width: 55px;
     margin-left: 10px;
+    margin-top: -10px;
 }
 
 .Iservice__detail p
